Adiciona minhas alterações e novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <blockquote>
             <p class="frase"></p>
             <cite class="autor"></cite>
+            <img class="img" src="" alt="Imagem da citação">
             <button class="btn-novo">Me Motive!</button>
         </blockquote>
 
